@@ -3,18 +3,15 @@ package tkachgeek.commands.command.arguments;
 import org.bukkit.command.CommandSender;
 import tkachgeek.commands.command.Argument;
 import tkachgeek.commands.command.arguments.bukkit.location.LocationPart;
-import tkachgeek.commands.command.arguments.bukkit.location.TargetXArg;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ComplexArg extends Argument {
-  public static ComplexArg xyz = new ComplexArg(new TargetXArg(LocationPart.X), new TargetXArg(LocationPart.Y), new TargetXArg(LocationPart.Z));
-  public static ComplexArg xyzw = new ComplexArg(new TargetXArg(LocationPart.X), new TargetXArg(LocationPart.Y), new TargetXArg(LocationPart.Z), new TargetXArg(LocationPart.WORLD));
-  
   List<Argument> args;
   
   public ComplexArg(Argument... args) {
-    this.args = List.of(args);
+    this.args = Arrays.asList(args);
   }
   
   public List<Argument> getArgs() {
